gcc/testsuite/rust/rustc/ui/macros/issue-92267.rs
//@ check-fail

pub fn main() { println!("ğŸ¦€%%%", 0) } // { dg-error "" "" { target *-*-* } }

